# learn_opengl

./: CMakeLists.txt  Makefile  README.md  glad.c  main.cpp
ext/: glad.c
include/: camera.hpp  opengl_object.hpp  shader.hpp  window.hpp
include/ext/glad/: glad.h
include/ext/glm/: vec3.hpp
include/glm/: vec2.hpp  vec3.hpp  vec4.hpp
shaders/: shader.frag  shader.vert
src/ext/: glad.c
src/getting-started/: main.cpp
src/lighting/: lighting.cpp  lighting.hpp
src/lighting/shaders/: cube.frag  light.frag
